--- a/frontend/project/20250122_website/index.html
+++ b/frontend/project/20250122_website/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
+    <script>
+      var _hmt = _hmt || [];
+      (function () {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?e2e757755e37db6764ef3faf05a73dea";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
