--- a/frontend/project/20250126-card_game02/index.html
+++ b/frontend/project/20250126-card_game02/index.html
@@ -10,6 +10,15 @@
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Source+Serif+4:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+    <script>
+      var _hmt = _hmt || [];
+      (function () {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?e2e757755e37db6764ef3faf05a73dea";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
